# patted

./: README.md  package-lock.json  package.json
src/backend/: Cargo.toml  backend.did
src/backend/src/: lib.rs  onnx.rs
src/declarations/backend/: backend.did.d.ts  backend.did.js
src/frontend/assets/: main.css
src/frontend/src/: index.html  index.js
