[package]
edition = "2021"
name = "backend"
version = "1.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0"
bytes = "1.5.0"
reqwest = { version = "0.11", features = ["json"] }
candid = "0.8.2"
colorgrad = "0.6"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.4.1"
image = { version = "0.25.1", features = ["png"], default-features = false }
prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
serde_bytes = "0.11.9"
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
